--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 WORDPRESS_ADMIN_USER=admin
 WORDPRESS_ADMIN_PASSWORD=admin
 WORDPRESS_ADMIN_EMAIL=admin@example.com
-WORDPRESS_DB_HOST=wpdb
+WORDPRESS_DB_HOST=db-service
 WORDPRESS_DB_NAME=wpdb
 WORDPRESS_DB_USER=admin
 WORDPRESS_DB_PASSWORD=admin
