env homeurl fix

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ WORDPRESS_TITLE=WP Local Setup
 WORDPRESS_DESCRIPTION=WP Local Setup
 WORDPRESS_PERMALINK_STRUCTURE=/%postname%/
 WORDPRESS_URL=http://localhost:8080
-WORDPRESS_HOME=http://localhost:8080
+WORDPRESS_HOME=//localhost:8080
 
 THEME_NAME=new-theme
 
